full-moon/tests/cases/fail/parser/last-stmt-1/source.lua
local function x()
	return 1
	return 2
end
